--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="./main.js"></script>
 </head>
 <body>
     <h1>Test de chat</h1>
-    <div id="messages">
-    </div>
+    <div class="container">
+    <div class="container-message">
     <div id="newMessage">
+    
     </div>
-    <form onsubmit="return addMessage(this)">
-    <input type="text" id="text" placeholder="escribir petición"/>
+    </div>
+    <form onsubmit="return addMessage(this)" class="form">
+    <input type="text" class="text-input" id="text" placeholder="escribir petición"/>
     <input type="submit" id="submit" value="enviar">
     </form>
+    </div>
+    
 </body>
 </html>
