--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,16 @@
     <script src="./main.js"></script>
 </head>
 <body>
-    <h1>Test de chat</h1>
+<div class="last">
+<p>TEST CHAT</p>
+
+</div>
+<div class="chatbot">
+<div class="navigator">
+
+    <img  class="image" src="../img/cocodrilo.svg" alt="Cocodrilo">
+    <p class="perichat-text">Perichat</p>
+</div>   
     <div class="container">
     <div class="container-message">
     <div id="newMessage">
@@ -19,9 +28,9 @@
     </div>
     <form onsubmit="return addMessage(this)" class="form">
     <input type="text" class="text-input" id="text" placeholder="escribir petición"/>
-    <input type="submit" id="submit" value="enviar">
     </form>
     </div>
     
+    </div>
 </body>
 </html>
