Raphael Martinez: se agregan mejoras en estilos

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <div class="chatbot">
 <div class="navigator">
 
-    <img  class="image" src="../img/cocodrilo.svg" alt="Cocodrilo">
+    <img  class="image" src="../img/periferia-icon.png" alt="Cocodrilo">
     <p class="perichat-text">Perichat</p>
 </div>   
     <div class="container">
